apps/external/truenas/backend-traffic-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: truenas
  namespace: truenas
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: truenas
  timeout:
    http:
      connectionIdleTimeout: 3600s
      requestTimeout: 3600s
